# duck-hub

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
requirements/: requirements-dev.txt  requirements.txt
src/bucket_hub/: __init__.py  app.py
src/bucket_hub/util/: db.py
src/duck_hub/: app.py
src/duck_hub/util/: db.py
test/: test_app.py
